# zcl-qt-wallet

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  application.qrc  zcl-qt-wallet.pro  zkc-qt-wallet.pro
docs/website/: config.toml
docs/website/content/: _index.md
res/: SIGNATURES_README  appdmg.json  zcl_qt_wallet_de.ts  zcl_qt_wallet_es.ts  zcl_qt_wallet_fr.ts  zcl_qt_wallet_pt.ts  zcl_qt_wallet_template.ts
src/: about.ui  addressbook.cpp  addresscombo.cpp  balancestablemodel.cpp  confirm.ui  connection.cpp  connection.h  connection.ui  createzclassicconfdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rpc.cpp  rpc.h  sendtab.cpp  senttxstore.cpp  settings.cpp  settings.h  settings.ui  turnstile.cpp  turnstile.ui  txtablemodel.cpp  version.h  zboard.ui
src/scripts/: control  desktopentry  dobuild.ps1  dotranslations.sh  dounifiedbuild.ps1  mkmacdmg.sh  mkrelease.sh  mkwininstaller.ps1  signbinaries.sh  zec-qt-wallet.wxs
