cmake_minimum_required(VERSION 3.13)
project(zcl_qt_wallet)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/3rdparty/json)
include_directories(src/3rdparty/qrcode)

add_executable(zcl_qt_wallet
        docs/website/archetypes/default.md
        docs/website/content/about/_index.md
        docs/website/content/post/_index.md
        docs/website/content/post/chapter-1.md
        docs/website/content/post/chapter-2.md
        docs/website/content/post/chapter-3.md
        docs/website/content/post/chapter-4.md
        docs/website/content/post/chapter-5.md
        docs/website/content/post/chapter-6.md
        docs/website/content/_index.md
        docs/website/content/contact.md
        docs/website/static/images/esmeralda.jpg
        docs/website/static/images/Pope-Edouard-de-Beaumont-1844.jpg
        docs/website/static/images/screenshot-main.png
        docs/website/static/images/Victor_Hugo-Hunchback.jpg
        docs/website/themes/ananke/archetypes/default.md
        docs/website/themes/ananke/data/webpack_assets.json
        docs/website/themes/ananke/images/screenshot.png
        docs/website/themes/ananke/images/tn.png
        docs/website/themes/ananke/layouts/_default/baseof.html
        docs/website/themes/ananke/layouts/_default/list.html
        docs/website/themes/ananke/layouts/_default/single.html
        docs/website/themes/ananke/layouts/_default/taxonomy.html
        docs/website/themes/ananke/layouts/_default/terms.html
        docs/website/themes/ananke/layouts/page/single.html
        docs/website/themes/ananke/layouts/partials/svg/facebook.svg
        docs/website/themes/ananke/layouts/partials/svg/github.svg
        docs/website/themes/ananke/layouts/partials/svg/gitlab.svg
        docs/website/themes/ananke/layouts/partials/svg/instagram.svg
        docs/website/themes/ananke/layouts/partials/svg/linkedin.svg
        docs/website/themes/ananke/layouts/partials/svg/medium.svg
        docs/website/themes/ananke/layouts/partials/svg/new-window.svg
        docs/website/themes/ananke/layouts/partials/svg/twitter.svg
        docs/website/themes/ananke/layouts/partials/svg/youtube.svg
        docs/website/themes/ananke/layouts/partials/menu-contextual.html
        docs/website/themes/ananke/layouts/partials/new-window-icon.html
        docs/website/themes/ananke/layouts/partials/page-header.html
        docs/website/themes/ananke/layouts/partials/site-favicon.html
        docs/website/themes/ananke/layouts/partials/site-footer.html
        docs/website/themes/ananke/layouts/partials/site-header.html
        docs/website/themes/ananke/layouts/partials/site-navigation.html
        docs/website/themes/ananke/layouts/partials/site-scripts.html
        docs/website/themes/ananke/layouts/partials/social-follow.html
        docs/website/themes/ananke/layouts/partials/summary-with-image.html
        docs/website/themes/ananke/layouts/partials/summary.html
        docs/website/themes/ananke/layouts/partials/tags.html
        docs/website/themes/ananke/layouts/post/list.html
        docs/website/themes/ananke/layouts/post/summary-with-image.html
        docs/website/themes/ananke/layouts/post/summary.html
        docs/website/themes/ananke/layouts/shortcodes/form-contact.html
        docs/website/themes/ananke/layouts/404.html
        docs/website/themes/ananke/layouts/index.html
        docs/website/themes/ananke/layouts/robots.txt
        docs/website/themes/ananke/src/css/_code.css
        docs/website/themes/ananke/src/css/_hugo-internal-templates.css
        docs/website/themes/ananke/src/css/_social-icons.css
        docs/website/themes/ananke/src/css/_styles.css
        docs/website/themes/ananke/src/css/_tachyons.css
        docs/website/themes/ananke/src/css/main.css
        docs/website/themes/ananke/src/css/postcss.config.js
        docs/website/themes/ananke/src/js/main.js
        docs/website/themes/ananke/src/package-lock.json
        docs/website/themes/ananke/src/package.json
        docs/website/themes/ananke/src/readme.md
        docs/website/themes/ananke/src/webpack.config.js
        docs/website/themes/ananke/static/dist/css/app.955516233bcafa4d2a1c13cea63c7b50.css
        docs/website/themes/ananke/static/dist/js/app.3fc0f988d21662902933.js
        docs/website/themes/ananke/static/images/gohugo-default-sample-hero-image.jpg
        docs/website/themes/ananke/CHANGELOG.md
        docs/website/themes/ananke/LICENSE.md
        docs/website/themes/ananke/package.json
        docs/website/themes/ananke/README.md
        docs/website/themes/ananke/theme.toml
        docs/website/config.toml
        docs/index.html
        docs/linguist-screenshot.png
        docs/qt-install.PNG
        docs/screenshot-main-win.png
        docs/screenshot-main.png
        docs/screenshot-sub.png
        res/appdmg.json
        res/connected.gif
        res/dmgbg.png
        res/icon.ico
        res/loading.gif
        res/logo.icns
        res/logo.svg
        res/logobig.gif
        res/mkicns.sh
        res/qt5.natvis
        res/resize.sh
        res/SIGNATURES_README
        res/Ubuntu-R.ttf
        res/wxsbanner.bmp
        res/wxsdialog.bmp
        res/zclassicdlogo.gif
        res/zcl-qt-wallet.xpm
        res/zcl_qt_wallet_de.qm
        res/zcl_qt_wallet_de.ts
        res/zcl_qt_wallet_es.qm
        res/zcl_qt_wallet_es.ts
        res/zcl_qt_wallet_fr.qm
        res/zcl_qt_wallet_fr.ts
        res/zcl_qt_wallet_pt.qm
        res/zcl_qt_wallet_pt.ts
        res/zcl_qt_wallet_template.ts
        src/3rdparty/json/json.hpp
        src/3rdparty/qrcode/BitBuffer.cpp
        src/3rdparty/qrcode/BitBuffer.hpp
        src/3rdparty/qrcode/QrCode.cpp
        src/3rdparty/qrcode/QrCode.hpp
        src/3rdparty/qrcode/QrSegment.cpp
        src/3rdparty/qrcode/QrSegment.hpp
        src/scripts/control
        src/scripts/desktopentry
        src/scripts/dobuild.ps1
        src/scripts/dotranslations.sh
        src/scripts/dounifiedbuild.ps1
        src/scripts/mkmacdmg.sh
        src/scripts/mkrelease.sh
        src/scripts/mkwininstaller.ps1
        src/scripts/signbinaries.sh
        src/scripts/zcl-qt-wallet.wxs
        src/about.ui
        src/addressbook.cpp
        src/addressbook.h
        src/addressbook.ui
        src/addresscombo.cpp
        src/addresscombo.h
        src/balancestablemodel.cpp
        src/balancestablemodel.h
        src/confirm.ui
        src/connection.cpp
        src/connection.h
        src/connection.ui
        src/createzclassicconfdialog.ui
        src/fillediconlabel.cpp
        src/fillediconlabel.h
        src/logger.cpp
        src/logger.h
        src/main.cpp
        src/mainwindow.cpp
        src/mainwindow.h
        src/mainwindow.ui
        src/memodialog.ui
        src/newrecurring.ui
        src/precompiled.h
        src/privkey.ui
        src/qrcodelabel.cpp
        src/qrcodelabel.h
        src/recurring.cpp
        src/recurring.h
        src/recurringdialog.ui
        src/rpc.cpp
        src/rpc.h
        src/sendtab.cpp
        src/senttxstore.cpp
        src/senttxstore.h
        src/settings.cpp
        src/settings.h
        src/settings.ui
        src/turnstile.cpp
        src/turnstile.h
        src/turnstile.ui
        src/turnstileprogress.ui
        src/txtablemodel.cpp
        src/txtablemodel.h
        src/version.h
        src/zboard.ui
        application.qrc
        LICENSE
        README.md
        zcl-qt-wallet.pro)
